fixed name overflow for spells & items

--- a/styles/actions.scss
+++ b/styles/actions.scss
@@ -63,9 +63,7 @@
             .strike {
                 height: auto;
                 margin-top: 2px;
-                display: flex;
                 gap: 1px;
-                flex-direction: column;
 
                 .temporary {
                     font-size: 0.86em;
